# coding-standards

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  README.md  RELATIONS.md
.github/ISSUE_TEMPLATE/: adr.yml  config.yml  idea.yml
.github/workflows/: deploy-docs.yml
decisions/: 0001-css-inline-style-prohibition.md  0002-python-src-structure.md  0003-fastapi-over-flask.md  README.md  _template.md
docs/: README.md  RELATIONS.md  _navbar.md  _sidebar.md  index.html  quickstart.md
docs/decisions/: 0001-css-inline-style-prohibition.md  0002-python-src-structure.md  0003-fastapi-over-flask.md  README.md  _template.md
docs/ideas/: 001-typescript-adoption.md  002-monorepo-structure.md  README.md  _template.md
docs/standards/: CODING_STANDARDS.md
ideas/: 001-typescript-adoption.md  002-monorepo-structure.md  README.md  _template.md
scripts/: generate_summary.py
templates/css/: base.css  components.css  utilities.css  variables.css
templates/js/: config.js  utils.js
templates/python/: .env.example  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
templates/python/src/: __init__.py  config.py  main.py
